--- a/web-developer.html
+++ b/web-developer.html
@@ -38,6 +38,18 @@
   
     <div class="container">
 <!--Begin body here --> 
+<h5><a href='http://jobs.jobvite.com/automationanywhere/job/okFmbfwg'>Automation Anywhere Careers - Sr. Web Developer</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Posted on: 2019-10-30</p>
+<hr/>
+<h5><a href='https://jobs.smartrecruiters.com/Ubisoft2/743999698456472-web-developer-frontend-ubisoft-club-f-m-d-'>Ubisoft Web Developer Frontend [Ubisoft Club] (f/m/d) | SmartRecruiters</a></h5> 
+<p><span class="badge badge-light">D?sseldorf, Germany</span></p>
+<p>Posted on: 2019-10-30</p>
+<hr/>
+<h5><a href='https://jobs.smartrecruiters.com/BoschGroup/743999698456626-full-stack-web-developer-personal-assistance-solutions-team'>Bosch Group Full-Stack Web Developer / Personal Assistance Solutions Team | SmartRecruiters</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Posted on: 2019-10-30</p>
+<hr/>
 <h5><a href='https://jobs.lever.co/nobul/bddd8265-866e-4349-a060-76d6064e40a4'>Nobul - Front End Web Developer - React</a></h5> 
 <p><span class="badge badge-light">Toronto, Ontario, Canada</span></p>
 <p>Posted on: 2019-10-30</p>
@@ -46,7 +58,7 @@
 <p><span class="badge badge-light">Melbourne Australia</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://proximity.applytojob.com/apply/s45lpoSq1J/Senior-React-Web-Developer-Developer'>Senior React Web Developer Developer - ProximityCR - Career Page</a></h5> 
+<h5><a href='http://proximity.applytojob.com/apply/s45lpoSq1J/Senior-React-Web-Developer-Developer'>Senior React Web Developer Developer - ProximityCR - Career Page</a></h5> 
 <p><span class="badge badge-light">Canada</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
@@ -76,11 +88,11 @@
 <p><span class="badge badge-light">United States Canada</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
-<h5><a href='https://artisantalent.com/jobs/indianapolis/strategic-market-director/46131?utm_content=104387970&utm_medium=social&utm_source=twitter&hss_channel=tw-159227192'>Creative, Digital, Visual, and Marketing Jobs | Find Jobs Here | Web Developers, Programmers, Digital Account Executives</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://artisantalent.com/jobs/indianapolis/strategic-market-director/46131?utm_content=104387970&utm_medium=social&utm_source=twitter&hss_channel=tw-159227192'>Creative, Digital, Visual, and Marketing Jobs | Find Jobs Here | Web Developers, Programmers, Digital Account Executives</a></h5> 
 <p><span class="badge badge-light">Cincinnati, OH  Chicago, IL  Denver, CO  Indianapolis, IN  Los Angeles, CA  New York, NY  San Francisco, CA  Washington, DC</span></p>
 <p>Posted on:: 2019-10-29</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://medthink.applytojob.com/apply/vb7MDDUZ1m/Junior-Web-Developer?source=GS'>Junior Web Developer - MedThink - Career Page</a></h5> 
+<h5><a href='https://medthink.applytojob.com/apply/vb7MDDUZ1m/Junior-Web-Developer?source=GS'>Junior Web Developer - MedThink - Career Page</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Oct 16, 2019 ... Apply to Junior Web Developer at MedThink in Cary, NC.</p>
 <hr/>
@@ -120,7 +132,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://www.pakngos.com.pk/job/trainer-web-designing-and-development'> Trainer-Web Designing and Development | PAK-NGOs</a></h5> 
+<h5><a href='https://www.pakngos.com.pk/job/trainer-web-designing-and-development'> Trainer-Web Designing and Development | PAK-NGOs</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-29</p>
 <hr/>
@@ -132,7 +144,7 @@
 <p><span class="badge badge-light">Indianapolis, IN</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/SeekaTechnology/743999698349571-it-web-design-app-developer-internship'>Seeka Technology IT / Web Design / App Developer Internship | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/SeekaTechnology/743999698349571-it-web-design-app-developer-internship'>Seeka Technology IT / Web Design / App Developer Internship | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Selangor, Malaysia</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
@@ -320,7 +332,7 @@ Develop process requirements and implement product development and release
 <p><span class="badge badge-light">Munich Munich</span></p>
 <p>Posted on: 2019-10-26</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/innovecs/jobs/4496097002'>Job Application for Middle Web Developer at Innovecs</a></h5> 
+<h5><a href='https://boards.greenhouse.io/innovecs/jobs/4496097002'>Job Application for Middle Web Developer at Innovecs</a></h5> 
 <p><span class="badge badge-light">Kyiv</span></p>
 <p>Posted on: 2019-10-26</p>
 <hr/>
@@ -328,7 +340,7 @@ Develop process requirements and implement product development and release
 <p><span class="badge badge-light">New York, New York</span></p>
 <p>Posted on: 2019-10-26</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/webmd/job/ogvobfw4'>WebMD Careers - Sr Director, Content Development</a></h5> 
+<h5><a href='https://jobs.jobvite.com/webmd/job/ogvobfw4'>WebMD Careers - Sr Director, Content Development</a></h5> 
 <p><span class="badge badge-light">United States  Atlanta, Georgia  New York, New York</span></p>
 <p>Posted on: 2019-10-26</p>
 <hr/>
@@ -340,7 +352,7 @@ Develop process requirements and implement product development and release
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-25</p>
 <hr/>
-<h5><a href='https://dasauge.de/jobs/stellenangebote/praktikum/e573811'>Stellenangebot: Pflichtpraktikant/Werkstudent (m/w/d) im Bereich Web Development (K?ln) ? dasauge? Stellenmarkt</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://dasauge.de/jobs/stellenangebote/praktikum/e573811'>Stellenangebot: Pflichtpraktikant/Werkstudent (m/w/d) im Bereich Web Development (K?ln) ? dasauge? Stellenmarkt</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-25</p>
 <hr/>
@@ -385,7 +397,7 @@ finding and telling compelling stories about health, medicine, and scientific?..
 <p><span class="badge badge-light">Cincinnati, OH  Chicago, IL  Denver, CO  Indianapolis, IN  Los Angeles, CA  New York, NY  San Francisco, CA  Washington, DC</span></p>
 <p>Posted on:: 2019-10-24</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://artisantalent.com/jobs/chicago/product-architect/46186?utm_content=104050920&utm_medium=social&utm_source=twitter&hss_channel=tw-159227192'>Creative, Digital, Visual, and Marketing Jobs | Find Jobs Here | Web Developers, Programmers, Digital Account Executives</a></h5> 
+<h5><a href='https://artisantalent.com/jobs/chicago/product-architect/46186?utm_content=104050920&utm_medium=social&utm_source=twitter&hss_channel=tw-159227192'>Creative, Digital, Visual, and Marketing Jobs | Find Jobs Here | Web Developers, Programmers, Digital Account Executives</a></h5> 
 <p><span class="badge badge-light">Cincinnati, OH  Chicago, IL  Denver, CO  Indianapolis, IN  Los Angeles, CA  New York, NY  San Francisco, CA  Washington, DC</span></p>
 <p>Posted on:: 2019-10-24</p>
 <hr/>
@@ -397,7 +409,7 @@ finding and telling compelling stories about health, medicine, and scientific?..
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-24</p>
 <hr/>
-<h5><a href='https://dribbble.com/jobs/24562-Senior-Web-Developer?source=twitter'>
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://dribbble.com/jobs/24562-Senior-Web-Developer?source=twitter'>
       Senior Web Developer at Persado - San Franciso, CA - Dribbble Design Jobs
   </a></h5> 
 <p><span class="badge badge-light"></span></p>
@@ -417,7 +429,7 @@ finding and telling compelling stories about health, medicine, and scientific?..
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-24</p>
 <hr/>
-<h5><a href='https://sportradar.join.com/jobs/451978-web-developer'>Job @ 1991 (Vienna): Web Developer | JOIN</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://sportradar.join.com/jobs/451978-web-developer'>Job @ 1991 (Vienna): Web Developer | JOIN</a></h5> 
 <p><span class="badge badge-light">Vienna Vienna</span></p>
 <p>Posted on: 2019-10-24</p>
 <hr/>
@@ -425,7 +437,7 @@ finding and telling compelling stories about health, medicine, and scientific?..
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-24</p>
 <hr/>
-<h5><a href='https://www.powderkegwebdesign.com/about/careers/'>Web Design &amp; Development Careers - Powderkeg</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://www.powderkegwebdesign.com/about/careers/'>Web Design &amp; Development Careers - Powderkeg</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-24</p>
 <hr/>
@@ -445,18 +457,6 @@ finding and telling compelling stories about health, medicine, and scientific?..
 <hr/>
 <h5><a href='https://jobs.jobvite.com/careers/service/redirect?c=q4d9Vfw5&k=Job&j=oWVTafwE&__jvst=Employee+Referral&__jvsd=sJHwDfwj&__jvsc=Twitter&bid=nLqZiMwJ'>ServiceNow Careers - Senior Marketing Web Developer</a></h5> 
 <p><span class="badge badge-light">Santa Clara, California  Santa Clara, CA</span></p>
-<p>Posted on:: 2019-10-24</p>
-<hr/>
-<h5><a href='https://jobs.lever.co/treasure-data/917e1a35-c960-4dc7-ac6f-0150a72b7091'>Arm Treasure Data - Senior Web Backend API Developer</a></h5> 
-<p><span class="badge badge-light">Vancouver, BC</span></p>
-<p>Posted on: 2019-10-24</p>
-<hr/>
-<h5><a href='https://uth.referrals.selectminds.com/jobs/web-developer-iv-wordpress-expert-in-communications-houston-tx-6180'>Web Developer IV / WordPress Expert in Communications - Houston, TX - UTHealth Careers</a></h5> 
-<p><span class="badge badge-light">Houston, TX</span></p>
-<p>Posted on: 2019-10-24</p>
-<hr/>
-<h5><a href='https://www.proctors.co.uk/careers/angular-front-end-web-developer-0'>Angular Front-End Web Developer | Proctor + Stevenson</a></h5> 
-<p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-24</p>
 <hr/>
 
