--- a/privacy-engineer.html
+++ b/privacy-engineer.html
@@ -104,7 +104,7 @@ application. Resume/CV ?. ATTACH RESUME/CV. Couldn't auto-read resume.</p>
 <p><span class="badge badge-light">Boulder Boulder, Colorado</span></p>
 <p>Posted on: 2019-10-11</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://lbl.referrals.selectminds.com/jobs/privacy-preserving-data-analysis-postdoctoral-scholar-2227'>Privacy-Preserving Data Analysis Postdoctoral Scholar - LBL Careers</a></h5> 
+<h5><a href='https://lbl.referrals.selectminds.com/jobs/privacy-preserving-data-analysis-postdoctoral-scholar-2227'>Privacy-Preserving Data Analysis Postdoctoral Scholar - LBL Careers</a></h5> 
 <p><span class="badge badge-light">United States</span></p>
 <p>Posted on: 2019-10-08</p>
 <hr/>
@@ -130,7 +130,7 @@ experience?...</p>
 <p><span class="badge badge-light">Los Angeles, California Albany, NY  Atlanta, GA  Austin, TX  Baltimore, MD  Bellevue, WA</span></p>
 <p>Posted on:: 2019-10-01</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://www.gobiglaw.com/jobs/19075669-privacy-and-data-security-associate-at-manatt-phelps-phillips-llp?utm_source=dlvr.it&utm_medium=twitter'>Privacy and Data Security Associate Job at Manatt, Phelps &amp; Phillips, LLP, in Boston, Massachusetts | GoBiglaw.com</a></h5> 
+<h5><a href='https://www.gobiglaw.com/jobs/19075669-privacy-and-data-security-associate-at-manatt-phelps-phillips-llp?utm_source=dlvr.it&utm_medium=twitter'>Privacy and Data Security Associate Job at Manatt, Phelps &amp; Phillips, LLP, in Boston, Massachusetts | GoBiglaw.com</a></h5> 
 <p><span class="badge badge-light">Boston, Massachusetts Albany, NY  Atlanta, GA  Austin, TX  Baltimore, MD  Bellevue, WA</span></p>
 <p>Posted on:: 2019-10-01</p>
 <hr/>
@@ -222,7 +222,7 @@ trust?...</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-09-04</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://bah.wd1.myworkdayjobs.com/en-US/BAH_Jobs/job/USA-VA-Alexandria-4800-Mark-Center-Dr/Privacy-and-Cybersecurity-Analyst_R0066225?source=DataPrivacyCareers.com'>Privacy and Cybersecurity Analyst</a></h5> 
+<h5><a href='https://bah.wd1.myworkdayjobs.com/en-US/BAH_Jobs/job/USA-VA-Alexandria-4800-Mark-Center-Dr/Privacy-and-Cybersecurity-Analyst_R0066225?source=DataPrivacyCareers.com'>Privacy and Cybersecurity Analyst</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>6 days ago ... Privacy and Cybersecurity Analyst. Key Role: Serve as a Cybersecurity and 
 privacy analyst for a DoD client and implement data analysis tools that meet 
@@ -322,7 +322,7 @@ and data protection risks in connection with Everlaw's products, services, and?.
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-06-14</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/bluevine/e84d469d-d675-4dbc-84c9-9a59efe523e2'>BlueVine - Privacy Analyst</a></h5> 
+<h5><a href='https://jobs.lever.co/bluevine/e84d469d-d675-4dbc-84c9-9a59efe523e2'>BlueVine - Privacy Analyst</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-06-14</p>
 <hr/>
@@ -334,7 +334,7 @@ and data protection risks in connection with Everlaw's products, services, and?.
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-06-11</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/boxinc/jobs/1719749'>Job Application for Sr. Privacy Compliance Analyst at Box</a></h5> 
+<h5><a href='https://boards.greenhouse.io/boxinc/jobs/1719749'>Job Application for Sr. Privacy Compliance Analyst at Box</a></h5> 
 <p><span class="badge badge-light">Redwood City</span></p>
 <p>Posted on: 2019-06-04</p>
 <hr/>
@@ -379,7 +379,7 @@ Prime's privacy program, working closely with privacy team members as well as?..
 <p>Apr 28, 2019 ... Blockchain Cryptographic Research Scientist (London/Paris). Global Services. 
 Core Business Services. Requisition #: GLO000QQ. Knowledge Manager?...</p>
 <hr/>
-<h5><a href='https://jobs.jobvite.com/ajmn/job/oulM9fwu'>Al Jazeera Media Network Careers - Senior Privacy Compliance Specialist - Technical</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/ajmn/job/oulM9fwu'>Al Jazeera Media Network Careers - Senior Privacy Compliance Specialist - Technical</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-05-08</p>
 <hr/>
@@ -433,7 +433,7 @@ affect?...</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-04-28</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://mixpanel.com/legal/privacy-policy/'>Privacy Policy | Mobile &amp; Web User Analytics | Mixpanel</a></h5> 
+<h5><a href='https://mixpanel.com/legal/privacy-policy/'>Privacy Policy | Mobile &amp; Web User Analytics | Mixpanel</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-04-28</p>
 <hr/>
