--- a/biostatistics.html
+++ b/biostatistics.html
@@ -131,7 +131,7 @@ files, writing application programs within a statistical software, analyzing dat
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-10</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://tfscareers.workable.com/j/42D2A18D41'>TFS - Jobs: Biostatistician - Apply online</a></h5> 
+<h5><a href='https://tfscareers.workable.com/j/42D2A18D41'>TFS - Jobs: Biostatistician - Apply online</a></h5> 
 <p><span class="badge badge-light">Barcelona, Catalonia, Spain</span></p>
 <p>Posted on: 2019-10-09</p>
 <hr/>
@@ -147,7 +147,7 @@ files, writing application programs within a statistical software, analyzing dat
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-03</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://tfscareers.workable.com/j/EE7AB7F098'>TFS - Jobs: Biostatistician, home or office based (m/w/d) - Apply online</a></h5> 
+<h5><a href='https://tfscareers.workable.com/j/EE7AB7F098'>TFS - Jobs: Biostatistician, home or office based (m/w/d) - Apply online</a></h5> 
 <p><span class="badge badge-light">Hamburg, Germany</span></p>
 <p>Posted on: 2019-10-03</p>
 <hr/>
@@ -155,7 +155,7 @@ files, writing application programs within a statistical software, analyzing dat
 <p><span class="badge badge-light">North America United States  North America United States  North America United States  North America United States</span></p>
 <p>Posted on: 2019-10-03</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://incresearch.referrals.selectminds.com/jobs/senior-biostatistician-home-or-office-based-eu-31242'>Senior Biostatistician - Home or Office based EU - Syneos Health Careers</a></h5> 
+<h5><a href='https://incresearch.referrals.selectminds.com/jobs/senior-biostatistician-home-or-office-based-eu-31242'>Senior Biostatistician - Home or Office based EU - Syneos Health Careers</a></h5> 
 <p><span class="badge badge-light">Barcelona Italy</span></p>
 <p>Posted on: 2019-10-03</p>
 <hr/>
@@ -189,7 +189,7 @@ files, writing application programs within a statistical software, analyzing dat
 <p><span class="badge badge-light">North America United States  North America United States  North America United States  North America United States</span></p>
 <p>Posted on: 2019-09-30</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/myovantsciences42/jobs/4441972002'>Job Application for Senior Biostatistician/Manager, Biostatistics at Myovant Sciences</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/myovantsciences42/jobs/4441972002'>Job Application for Senior Biostatistician/Manager, Biostatistics at Myovant Sciences</a></h5> 
 <p><span class="badge badge-light">Brisbane</span></p>
 <p>Posted on: 2019-09-26</p>
 <hr/>
@@ -227,7 +227,7 @@ files, writing application programs within a statistical software, analyzing dat
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-09-15</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/licor/jobs/1837383'>Job Application for Sales Consultant, Bio (United States, Atlanta based) at LI-COR</a></h5> 
+<h5><a href='https://boards.greenhouse.io/licor/jobs/1837383'>Job Application for Sales Consultant, Bio (United States, Atlanta based) at LI-COR</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-09-15</p>
 <hr/>
@@ -335,7 +335,7 @@ midline and endline quantitative data collection points. The primary outcomes of
 <p><span class="badge badge-light">Philadelphia, PA</span></p>
 <p>Posted on: 2019-09-04</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://adaptimmunellc.applytojob.com/apply/9RkaqWWa88/Director-Biostatistics-And-Clinical-Informatics'>Director, Biostatistics and Clinical Informatics - Adaptimmune - Career Page</a></h5> 
+<h5><a href='http://adaptimmunellc.applytojob.com/apply/9RkaqWWa88/Director-Biostatistics-And-Clinical-Informatics'>Director, Biostatistics and Clinical Informatics - Adaptimmune - Career Page</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-09-04</p>
 <hr/>
@@ -400,7 +400,7 @@ of the Biostatistics department in the R&D Development organisation.</p>
 <p><span class="badge badge-light">Irvine, California</span></p>
 <p>Posted on: 2019-08-23</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/portola/job/o4aRafwZ'>Portola Pharmaceuticals Careers - Director, Biostatistics, Cardiovascular Programs</a></h5> 
+<h5><a href='https://jobs.jobvite.com/portola/job/o4aRafwZ'>Portola Pharmaceuticals Careers - Director, Biostatistics, Cardiovascular Programs</a></h5> 
 <p><span class="badge badge-light">South San Francisco, California</span></p>
 <p>Posted on: 2019-08-21</p>
 <hr/>
@@ -412,7 +412,7 @@ of the Biostatistics department in the R&D Development organisation.</p>
 <p><span class="badge badge-light">North America</span></p>
 <p>Posted on: 2019-08-19</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/grailbio/b9155e14-ae07-4515-a443-ae78890c15a3'>GRAIL - Senior or Staff Biostatistician</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/grailbio/b9155e14-ae07-4515-a443-ae78890c15a3'>GRAIL - Senior or Staff Biostatistician</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-08-16</p>
 <hr/>
